--- a/style.css
+++ b/style.css
@@ -42,3 +42,30 @@ footer {
   font-size: 0.9em;
   color: var(--rich-espresso);
 }
+
+/* Blog Styling */
+.blog-post {
+  margin-bottom: 40px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid var(--rich-espresso);
+}
+
+.blog-post h2 {
+  margin-bottom: 5px;
+  font-size: 1.8em;
+}
+
+.blog-post h2 a {
+  color: var(--rich-espresso);
+  text-decoration: none;
+}
+
+.blog-post h2 a:hover {
+  color: var(--dusty-rose);
+}
+
+.blog-post .date {
+  font-size: 0.9em;
+  color: #6e5e5e;
+  margin-bottom: 10px;
+}
